[gd_scene load_steps=3 format=3 uid="uid://csn8owwdhlhfc"]

[ext_resource type="Script" path="res://addons/gamepush/Demo/Modules/games_collections.gd" id="1_sutdx"]
[ext_resource type="StyleBox" uid="uid://b8gk1mmy8e4dt" path="res://addons/gamepush/Demo/GP_Green_box_flat.tres" id="2_7vxpy"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sutdx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Head" type="Panel" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme_override_styles/panel = ExtResource("2_7vxpy")

[node name="Header" type="Label" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Head"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -11.5
offset_right = 29.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Games Collections
"

[node name="Header" type="Panel" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="tag" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header"]
layout_mode = 0
offset_left = 341.0
offset_top = 59.0
offset_right = 528.0
offset_bottom = 90.0
placeholder_text = "Tag..."

[node name="id" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header"]
layout_mode = 0
offset_left = 343.0
offset_top = 11.0
offset_right = 530.0
offset_bottom = 42.0
placeholder_text = "Id..."

[node name="param" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header"]
layout_mode = 0
offset_left = 778.0
offset_top = 43.0
offset_right = 965.0
offset_bottom = 74.0
placeholder_text = "Param..."

[node name="key" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header"]
layout_mode = 0
offset_left = 574.0
offset_top = 43.0
offset_right = 761.0
offset_bottom = 74.0
placeholder_text = "Key..."

[node name="ButtonGrid" type="GridContainer" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.71
columns = 2

[node name="open" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "open"

[node name="fetch" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "fetch"

[connection signal="pressed" from="MarginContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/fetch" to="." method="_on_fetch_pressed"]
